Bug 46337 - Date fields in header crash LibreOffice on save to docx
Summary: Date fields in header crash LibreOffice on save to docx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: x86-64 (AMD64) Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: bibisected35 bibisected35older target...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-02-20 04:48 UTC by Egil Hansen
Modified: 2012-03-13 03:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Egil Hansen 2012-02-20 04:48:39 UTC
1. Create a new Writer document
2. Insert a Header (Default)
3. Insert a Date field in the header text
4. Save the file as Office Open XML Text (.docx)

LibreOffice crashes.....
Comment 1 s-joyemusequna 2012-02-20 05:36:32 UTC
Confirmed (Windows XP, LibO 3.5).
Comment 2 s-joyemusequna 2012-02-20 06:43:18 UTC
Crashes with LibO 3.4.5 too (tested on Vista 64).

Works fine with LibO 3.3.4 (tested on Windows XP). It is a regression.
Comment 3 Björn Michaelsen 2012-03-01 08:54:41 UTC
Regression does appear in oldest version of bibisect-3.5.tar.lzma and must be older.
Comment 4 Not Assigned 2012-03-09 08:06:03 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6eea398000f04c68f422ab07353ea4631f4edb5e&g=libreoffice-3-5

fdo#46337: don't use an invalidated iterator


It will be available in LibreOffice 3.5.2.
Comment 5 Not Assigned 2012-03-09 08:07:13 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-3-4":

http://cgit.freedesktop.org/libreoffice/writer/commit/?id=ec8c745b837c686fae511e298a6e3ffb3692a457&g=libreoffice-3-4

fdo#46337: don't use an invalidated iterator


It will be available in LibreOffice 3.4.7.
Comment 6 Michael Stahl 2012-03-09 08:10:16 UTC
crashed on Linux on libreoffice-3-5 as well, but not on master;
looks like this fixed it, so i've backported it:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2df1c40b4b7cb3107a68984db644f10097f04c3c
Comment 7 Not Assigned 2012-03-13 03:21:34 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-3-4-6":

http://cgit.freedesktop.org/libreoffice/writer/commit/?id=bcc1b51cfe3bdd8289ac8f2b9803428d052d6d2a&g=libreoffice-3-4-6

fdo#46337: don't use an invalidated iterator


It will be available already in LibreOffice 3.4.6.