fdo#46337: don't use an invalidated iterator

(cherry picked from commit 2df1c40b4b7cb3107a68984db644f10097f04c3c)

Signed-off-by: Michael Stahl <mstahl@redhat.com>